feat(server): change time fomat to yyyy-MM-dd HH:mm:ss.SSS